sema/testdata/gcc-c99-extra/reject/utf32-4.c
typedef __CHAR32_TYPE__ char32_t;

char32_t	c0 = U'';
char32_t	c1 = U'ab';
char32_t	c2 = U'\U00064321';

char32_t	c3 = 'a';
char32_t	c4 = u'a';
char32_t	c5 = u'\u2029';
char32_t	c6 = u'\U00064321';
char32_t	c7 = L'a';
char32_t	c8 = L'\u2029';
char32_t	c9 = L'\U00064321';

int main () {}
